Update import path with image_config support and works with syft 0.10 formatted output. Also uses content references
